git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1864 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -374,6 +374,9 @@
           </execution>
         </executions>
         <configuration>
+          <systemPropertyVariables>
+            <remote.public.url>${remote.public.url}</remote.public.url>
+          </systemPropertyVariables>
           <skip>${maven.failsafe.skip}</skip>
           <useSystemClassLoader>${maven.failsafe.useSystemClassLoader}</useSystemClassLoader>
           <useFile>false</useFile>
