git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1867 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -395,12 +395,11 @@
             <artifactId>rice-sampleapp</artifactId>
             <version>${deploy.version}</version>
             <type>test-jar</type>
-            <scope>test</scope>
           </dependency>
           <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <scope>test</scope>
+            <version>2.0</version>
           </dependency>
         </dependencies>
       </plugin>
