git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1868 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -363,7 +363,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>${failsafe.plugin.version}</version>
+        <version>2.9</version>
         <executions>
           <execution>
             <id>integration-test</id>
