--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -339,6 +339,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>selenium-maven-plugin</artifactId>
+        <version>2.0</version>
         <executions>
           <execution>
             <id>start-selenium-server</id>
