--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -55,6 +55,7 @@
     <url>http://svn.kuali.org/repos/foundation/trunk/deploy</url>
   </scm>
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <deploy.phase>package</deploy.phase>
     <maven.failsafe.forkmode>once</maven.failsafe.forkmode>
     <maven.failsafe.forkedProcessTimeoutInSeconds>7200</maven.failsafe.forkedProcessTimeoutInSeconds>
@@ -341,6 +342,13 @@
         <artifactId>selenium-maven-plugin</artifactId>
         <version>2.0</version>
         <executions>
+          <execution>
+            <id>xvfb</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>xvfb</goal>
+            </goals>
+          </execution>
           <execution>
             <id>start-selenium-server</id>
             <phase>pre-integration-test</phase>
