git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1874 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -389,8 +389,12 @@
           <useSystemClassLoader>${maven.failsafe.useSystemClassLoader}</useSystemClassLoader>
           <useFile>false</useFile>
           <failIfNoTests>false</failIfNoTests>
-          <includes>
+          <!--
+            <includes>
             <include>${maven.failsafe.includes}</include>
+            </includes> -->
+          <includes>
+            <include>**/FiscalOfficerInfoMaintenanceNewIT.java</include>
           </includes>
           <forkMode>${maven.failsafe.forkmode}</forkMode>
           <forkedProcessTimeoutInSeconds>${maven.failsafe.forkedProcessTimeoutInSeconds}</forkedProcessTimeoutInSeconds>
