git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1877 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -55,7 +55,6 @@
     <url>http://svn.kuali.org/repos/foundation/trunk/deploy</url>
   </scm>
   <properties>
-    <project.build.testSourceDirectory>${project.basedir}/sampleapp/src/it/java</project.build.testSourceDirectory>
     <deploy.phase>package</deploy.phase>
     <maven.failsafe.forkmode>once</maven.failsafe.forkmode>
     <maven.failsafe.forkedProcessTimeoutInSeconds>7200</maven.failsafe.forkedProcessTimeoutInSeconds>
@@ -382,6 +381,7 @@
           </execution>
         </executions>
         <configuration>
+          <testSourceDirectory>/opt/jenkins-home/jobs/rice-trunk-deploy-sampleapp/workspace/sampleapp/src/it/java</testSourceDirectory>
           <encoding>UTF-8</encoding>
           <systemPropertyVariables>
             <remote.public.url>${remote.public.url}</remote.public.url>
