git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1878 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -395,7 +395,7 @@
             <include>${maven.failsafe.includes}</include>
             </includes> -->
           <includes>
-            <include>**/FiscalOfficerInfoMaintenanceNewIT.java</include>
+            <include>**/*FiscalOfficerInfoMaintenanceNewIT.java</include>
           </includes>
           <forkMode>${maven.failsafe.forkmode}</forkMode>
           <forkedProcessTimeoutInSeconds>${maven.failsafe.forkedProcessTimeoutInSeconds}</forkedProcessTimeoutInSeconds>
