git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1879 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -115,6 +115,7 @@
     </profile>
   </profiles>
   <build>
+    <testSourceDirectory>/opt/jenkins-home/jobs/rice-trunk-deploy-sampleapp/workspace/sampleapp/src/it/java</testSourceDirectory>
     <pluginManagement>
       <plugins>
         <plugin>
