--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -396,7 +396,7 @@
             <include>${maven.failsafe.includes}</include>
             </includes> -->
           <includes>
-            <include>**/*FiscalOfficerInfoMaintenanceNewIT.java</include>
+            <include>**/LoginLogoutIt.java</include>
           </includes>
           <forkMode>${maven.failsafe.forkmode}</forkMode>
           <forkedProcessTimeoutInSeconds>${maven.failsafe.forkedProcessTimeoutInSeconds}</forkedProcessTimeoutInSeconds>
