git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1884 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -396,7 +396,7 @@
             <include>${maven.failsafe.includes}</include>
             </includes> -->
           <includes>
-            <include>**/LoginLogoutIt.java</include>
+            <include>**/LoginLogoutIT.java</include>
           </includes>
           <forkMode>${maven.failsafe.forkmode}</forkMode>
           <forkedProcessTimeoutInSeconds>${maven.failsafe.forkedProcessTimeoutInSeconds}</forkedProcessTimeoutInSeconds>
