git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1887 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -11,7 +11,7 @@
 		</exec>
 	</target>
 	<target name="create-tomcat1">
-		<antcall target="create=instance">
+		<antcall target="create-instance">
 			<param name="tomcat.user" value="tomcat1" />
 		</antcall>
 	</target>
