git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1888 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -10,8 +10,19 @@
 			<arg value="${tomcat.user}" />
 		</exec>
 	</target>
+	<target name="remove-instance">
+		<exec executable="userdel">
+			<arg value="-rf" />
+			<arg value="${tomcat.user}" />
+		</exec>
+	</target>
 	<target name="create-tomcat1">
 		<antcall target="create-instance">
+			<param name="tomcat.user" value="tomcat1" />
+		</antcall>
+	</target>
+	<target name="remove-tomcat1">
+		<antcall target="remove-instance">
 			<param name="tomcat.user" value="tomcat1" />
 		</antcall>
 	</target>
