git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1890 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -16,7 +16,7 @@
 			<arg value="-rf" />
 			<arg value="${tomcat.user}" />
 		</exec>
-		<rmdir dir="${catalina.base}" />
+		<delete dir="${catalina.base}" />
 	</target>
 	<target name="create1">
 		<antcall target="create-instance">
