--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -1,7 +1,7 @@
 <project name="Tomcat Instance Manager">
 	<description>Manage the creating/removing of Tomcat instances on a Rice deployment server</description>
 
-	<assert name="instance" execute="false" message="Must specify an instance eg 'ant create -Dinstance=1'" />
+	<assert name="instance" message="Must specify an instance eg 'ant create -Dinstance=1'" />
 
 	<property name="tomcat.user" value="tomcat${instance}" />
 	<property name="catalina.home" location="/usr/local/tomcat" />
