git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1893 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -7,6 +7,9 @@
 	<property name="catalina.home" location="/usr/local/tomcat" />
 	<property name="catalina.base" value="/usr/local/tomcat${instance}" />
 
+	<target name="init">
+	</target>
+
 	<target name="create">
 		<exec executable="useradd">
 			<arg value="-g" />
