--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -1,28 +1,32 @@
 <project name="Tomcat Instance Manager">
-	<description>Manage the creating/removing of Tomcat instances on a Rice deployment server</description>
+  <description>Manage the creating/removing of Tomcat instances on a Rice deployment server</description>
 
-	<assert name="instance" message="Must specify an instance eg 'ant create -Dinstance=1'" />
+  <property name="tomcat.user" value="tomcat${instance}" />
+  <property name="catalina.home" location="/usr/local/tomcat" />
+  <property name="catalina.base" value="/usr/local/tomcat${instance}" />
 
-	<property name="tomcat.user" value="tomcat${instance}" />
-	<property name="catalina.home" location="/usr/local/tomcat" />
-	<property name="catalina.base" value="/usr/local/tomcat${instance}" />
+  <target name="init">
+    <if>
+      <isset property="instance" />
+      <then>
+        <echo>foo</echo>
+      </then>
+    </if>
+  </target>
 
-	<target name="init">
-	</target>
-
-	<target name="create">
-		<exec executable="useradd">
-			<arg value="-g" />
-			<arg value="tomcat" />
-			<arg value="${tomcat.user}" />
-		</exec>
-		<mkdir dir="${catalina.base}" />
-	</target>
-	<target name="remove">
-		<exec executable="userdel">
-			<arg value="-rf" />
-			<arg value="${tomcat.user}" />
-		</exec>
-		<delete dir="${catalina.base}" />
-	</target>
+  <target name="create">
+    <exec executable="useradd">
+      <arg value="-g" />
+      <arg value="tomcat" />
+      <arg value="${tomcat.user}" />
+    </exec>
+    <mkdir dir="${catalina.base}" />
+  </target>
+  <target name="remove">
+    <exec executable="userdel">
+      <arg value="-rf" />
+      <arg value="${tomcat.user}" />
+    </exec>
+    <delete dir="${catalina.base}" />
+  </target>
 </project>
