git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1895 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -6,12 +6,16 @@
   <property name="catalina.base" value="/usr/local/tomcat${instance}" />
 
   <target name="init">
-    <if>
-      <isset property="instance" />
-      <then>
-        <echo>foo</echo>
-      </then>
-    </if>
+    <condition property="instance.set">
+      <and>
+        <isset property="instance" />
+      </and>
+    </condition>
+    <fail unless="instance.set">
+     Must specify an instance eg:
+     ant create -Dinstance=1
+     ant remove -Dinstance=1
+    </fail>
   </target>
 
   <target name="create">
