git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1901 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -60,6 +60,12 @@
     <mkdir dir="${catalina.base}/shared" />
     <mkdir dir="${catalina.base}/temp" />
     <mkdir dir="${catalina.base}/webapps" />
+    <copy todir="${catalina.base}/conf">
+      <fileset dir="${catalina.home}/conf" />
+    </copy>
+    <copy todir="${catalina.base}/conf">
+      <fileset dir="${catalina.home}/logs" includes="*.jsp" />
+    </copy>
   </target>
   <target name="remove" depends="init">
     <exec executable="userdel">
