git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1903 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -21,7 +21,7 @@
     <copy todir="${catalina.base}/conf">
       <fileset dir="${catalina.home}/conf" />
     </copy>
-    <copy todir="${catalina.base}/conf">
+    <copy todir="${catalina.base}/logs">
       <fileset dir="${catalina.home}/logs" includes="*.jsp" />
     </copy>
   </target>
