git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1905 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -31,6 +31,11 @@
         <filter token="tomcat.https.port" value="${tomcat.https.port}" />
       </filterset>
     </copy>
+    <exec executable="chown">
+      <arg value="-R" />
+      <arg value="${tomcat.user}:tomcat" />
+      <arg value="${catalina.base}" />
+    </exec>
   </target>
 
   <target name="remove" depends="init">
