--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -29,6 +29,8 @@
         <filter token="tomcat.shutdown.port" value="${tomcat.shutdown.port}" />
         <filter token="tomcat.http.port" value="${tomcat.http.port}" />
         <filter token="tomcat.https.port" value="${tomcat.https.port}" />
+        <filter token="catalina.base" value="${catalina.base}" />
+        <filter token="user.home" value="${user.home}" />
       </filterset>
     </copy>
     <exec executable="chown">
