--- a/maven-manifest-plugin/pom.xml
+++ b/maven-manifest-plugin/pom.xml
@@ -8,7 +8,7 @@
     <version>18</version>
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
-  <artifactId>maven-http-plugin</artifactId>
+  <artifactId>maven-manifest-plugin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Manifest Plugin</name>
