--- a/maven-sysprops-plugin/.project
+++ b/maven-sysprops-plugin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>maven-manifest-plugin</name>
+  <name>maven-sysprops-plugin</name>
   <comment></comment>
   <projects>
   </projects>
