--- a/maven-sysprops-plugin/pom.xml
+++ b/maven-sysprops-plugin/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -9,7 +8,7 @@
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-sysprops-plugin</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>maven-plugin</packaging>
   <name>Maven System Properties Plugin</name>
   <description>Set system properties</description>
@@ -17,9 +16,9 @@
     <kuali.slf4j.version>1.6.1</kuali.slf4j.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-sysprops-plugin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-sysprops-plugin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-sysprops-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-sysprops-plugin-1.0.0</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-sysprops-plugin-1.0.0</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/maven-sysprops-plugin-1.0.0</url>
   </scm>
   <dependencies>
     <dependency>
