--- a/maven-sysprops-plugin/pom.xml
+++ b/maven-sysprops-plugin/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-sysprops-plugin</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven System Properties Plugin</name>
   <description>Set system properties</description>
@@ -16,9 +16,9 @@
     <kuali.slf4j.version>1.6.1</kuali.slf4j.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-sysprops-plugin-1.0.0</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-sysprops-plugin-1.0.0</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/maven-sysprops-plugin-1.0.0</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-sysprops-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-sysprops-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-sysprops-plugin</url>
   </scm>
   <dependencies>
     <dependency>
