git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/trunk@1969 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -33,7 +33,7 @@
 
     <deploy.env>${env.DEPLOY_ENV}</deploy.env>
 
-    <deploy.server>${${deploy.env}.deploy.server.1}</deploy.server>
+    <deploy.server>${${deploy.env}.deploy.server}</deploy.server>
 
     <env1.deploy.server>${deploy.server.1}</env1.deploy.server>
     <env1.public.url>http://dev1.rice.kuali.org</env1.public.url>
