git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/trunk@1970 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -177,6 +177,7 @@
                 <phase>install</phase>
                 <configuration>
                   <target>
+                    <echo>${deploy.env}</echo>
                     <echo>${deploy.server}</echo>
                   </target>
                 </configuration>
