git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/trunk@1971 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -1,5 +1,10 @@
 <project name="Application Deployer">
   <description>Deploy applications packaged by Maven to a server on EC2</description>
+  <target name="env1">
+    <echo>${deploy.env}</echo>
+    <echo>${${deploy.env}.deploy.server}</echo>
+    <echo>${env1.deploy.server}</echo>
+  </target>
   <property name="auth" value="${user.home}/kr-key.pem" />
   <property name="mvn" value="mvn" />
   <property name="impex.dba.username" value="master" />
